[metadata]
name = just_tcp_proxy
version = 0.0.1
description = Just a TCP proxy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mdavidsaver/just-tcp-proxy
author = Michael Davidsaver
author_email = mdavidsaver@gmail.com
license = GPL-3+
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = True
python_requires = >=3.7
packages =
  just_tcp_proxy
  just_tcp_proxy.test

[options.entry_points]
console_scripts =
    just_tcp_proxy = just_tcp_proxy:main
